syntax = "proto3";

package api.valuation.v1;

option go_package = "valuation/api/valuation/v1;v1";
option java_multiple_files = true;
option java_package = "api.valuation.v1";

service Valuation {
	rpc GetEstimatePrice (EstimatePriceRequest) returns (EstimatePriceReply);
}

message EstimatePriceRequest {
	string origin = 1;
	string destination = 2;
}
message EstimatePriceReply {
	int32 code = 1;
	string message = 2;
	string origin=3;
	string destination=4;
	int32 price=5;
}
